# wasi-demo

./: README.md  package-lock.json  package.json
crates/: README.md
crates/wasmer/: Cargo.toml  rust-toolchain.toml
crates/wasmer/src/: main.rs
examples/wasmer/: .env.sample  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/wasmer/src/: App.tsx  main.tsx
scripts/: build.mjs  wasmer-test.mjs
wasi-rs/: Cargo.toml  README.md  rust-toolchain.toml
wasi-rs/app/: Cargo.toml  wasmer.toml
wasi-rs/app/src/: main.rs
wasi-rs/lib/: Cargo.toml
wasi-rs/lib/src/: lib.rs
wasi-rs/runtime/: Cargo.toml
wasi-rs/runtime/src/: lib.rs
