[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
default = ["wasm"]
wasm = ["wasm-bindgen"]
