[package]
name = "runtime"
version = "0.1.0"
edition = "2024"
description = "Wasmer runtime"
repository = "https://github.com/jurevans/wasi-demo"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
wasm-bindgen = { version = "0.2.100" }
wasmer = { version = "6.0.1", default-features = false, features = ["js"] }
wasmer-types = { version = "6.0.1" }
wasmer-wasix = { version = "0.600.1", default-features = false, features = ["js"] }
